Implement static method to create a background thread that pipes streams Enhance TimeProcess with stdout redirection and streams closing